<resources>
    <string name="app_name">RahasiaNusantara</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign Up</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_reenter_password">Re-enter Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">Sign in</string>

    <string-array name="list_model_type">
        <item>3D Model</item>
        <item>Image Model</item>
        <item>Video Model</item>
    </string-array>

    <string name="file_quests">Quests.data</string>
    <string name="noquest">You have no quest to show.</string>

    <string name="facebook_app_id">145869076002855</string>
    <string name="fb_login_protocol_scheme">fb145869076002855</string>

</resources>
